Get statistics by tasting room
